--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,4 +22,8 @@
     <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#04561A</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="article_detail_bgcolor">#fff</color>
+    <color name="meta_bar_bgcolor">#333</color>
+    <color name="detail_title_text_color">#fff</color>
+    <color name="detail_subtitle_text_color">#8fff</color>
 </resources>
