--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -17,7 +17,6 @@
 
 <resources>
     <color name="photo_placeholder">#ccc</color>
-
     <color name="theme_primary">#04561A</color>
     <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#04561A</color>
@@ -26,4 +25,5 @@
     <color name="meta_bar_bgcolor">#333</color>
     <color name="detail_title_text_color">#fff</color>
     <color name="detail_subtitle_text_color">#8fff</color>
+    <color name="article_subtitle_text_color">#6000</color>
 </resources>
